# bitset_segmented

./: CMakeLists.txt  README.md
benchmark/: petr4_benchmark.cpp
include/bitset_segmented/: bitset_segmented.hpp
src/: bitset_segmented.cpp
